--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
   },
   "dependencies": {
     "expo": "~48.0.5",
+    "expo-document-picker": "~11.2.1",
+    "expo-speech": "~11.1.1",
     "expo-status-bar": "~1.4.4",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-native": "0.71.3"
+    "react-native": "0.71.3",
+    "react-native-rolling-text": "^0.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.0.14",
+    "tailwindcss": "^3.2.7",
     "typescript": "^4.9.4"
   },
   "private": true
